--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:softsales
+spring.h2.console.path=/db
 
 server.error.include-stacktrace=never
+spring.ai.openai.api-key=API_KEY
